<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Overall Strings -->
    <string name="app_name">Table Dash</string>
    <string name="hello_world">Hello world!</string>
    <string name="update">Update</string>
    <string name="action_settings">Settings</string>
    <string name="action_donate">Donate</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- Main Activity Strings -->
    <string name="tap_card">Tap your card to check in</string>
    <string name="check_status"><u>Check canteen status</u></string>

    <!-- Picker Activity Strings -->
    <string name="pick_location">Pick a location:</string>
    <string name="location_canteen_a">Canteen 1</string>
    <string name="location_canteen_b">Canteen 2</string>
    <string name="location_canteen_c">Canteen 3</string>
    <string name="picker_check_status">Check status</string>

    <!-- Status Activity Strings -->
    <string name="status_tab_statistics">Geek Stats</string>
    <string name="status_tab_graphical">Graphical Layout</string>

    <!-- Statistics Fragment Strings -->
    <string name="total_tables">Total tables: </string>
    <string name="temp_value_zero">0</string>
    <string name="vacant_tables">Vacant tables:</string>
    <string name="avg_waiting_time">Average waiting time:</string>

    <!-- Graphical Fragment Strings -->
    <string name="work_in_progress">Work in progress!</string>
    <string name="maintenance">Maintenance</string>

    <!--Check-in Dialog Strings-->
    <string name="dialog_title_re_check_in">Not done yet?</string>
    <string name="dialog_message_re_check_in">I think I will finish in</string>
    <string name="dialog_title_check_in">Check in</string>
    <string name="dialog_message_check_in">I should be able to finish in</string>
    <string name="dialog_title_modify">I changed my mind</string>
    <string name="dialog_message_modify">I should be able to finish in</string>
    <string name="dialog_title_check_out">Check out</string>
    <string name="duration_1">1</string>
    <string name="duration_5">5</string>
    <string name="duration_10">10</string>
    <string name="duration_20">20</string>
    <string name="duration_30">30</string>
    <string name="duration_40">40</string>
    <string name="minutes">minutes</string>

</resources>
