<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/durations_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_btn_1_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/duration_1" />
        <RadioButton
            android:id="@+id/radio_btn_10_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/duration_10" />

        <RadioButton
            android:id="@+id/radio_btn_20_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/duration_20" />

        <RadioButton
            android:id="@+id/radio_btn_30_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_30" />

        <RadioButton
            android:id="@+id/radio_btn_40_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_40" />

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:id="@+id/textView" />
    </RadioGroup>
</LinearLayout>