<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout_Picker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PickerActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#7CA8B2"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

        android:saveEnabled="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pick_location"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp"

            android:text="@string/pick_location"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#110011" />

        <RadioGroup
            android:id="@+id/radioGroup_Location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_pick_location"
            android:layout_alignStart="@id/tv_pick_location"

            android:layout_below="@id/tv_pick_location"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/radio_btn_Canteen_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/location_canteen_a"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#221122" />

            <RadioButton
                android:id="@+id/radio_btn_Canteen_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_canteen_b"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#221122"/>

            <RadioButton
                android:id="@+id/radio_btn_Canteen_C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_canteen_c"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#221122"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#3A66A2"

            android:id="@+id/btn_picker_check_status"
            android:layout_below="@+id/radioGroup_Location"
            android:layout_marginTop="20dp"
            android:layout_alignRight="@+id/radioGroup_Location"
            android:layout_alignEnd="@+id/radioGroup_Location"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            android:text="@string/picker_check_status"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#110011" />

    </RelativeLayout>
 </FrameLayout>
