<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    
    android:background = "#33CCFF"
    
    tools:context=".StatusActivity$GraphicalFragment" >

    <TextView
        android:id="@+id/tv_Browse_workInProg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        
        android:text="@string/work_in_progress"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#0000CC" />

    <TextView
        android:id="@+id/tv_Browse_maintenance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        
        android:text="@string/maintenance"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#0000CC" />

    <ImageView
        android:id="@+id/iv_Browse_builder"
        android:contentDescription="@string/status_tab_graphical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/cc_builder" />
    
</RelativeLayout>