<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#7CA8B2"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

        android:saveEnabled="true" >

        <ImageView
            android:id="@+id/iv_main_image"

            android:background="@drawable/animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp" />

        <TextView
            android:id="@+id/tv_main_checkIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_below="@id/iv_main_image"
            android:layout_marginTop="20dp"

            android:text="@string/tap_card"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="#110011" />

        <TextView
            android:id="@+id/tv_main_checkStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"

            android:layout_marginBottom="2dp"

            android:text="@string/check_status"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#110011"

            android:clickable="true" />

        <Button
            android:id="@+id/check_out_button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#4E6E7F"

            android:layout_below="@+id/tv_main_checkIn"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            android:onClick="onClick"
            android:visibility="invisible"

            android:text="@string/dialog_title_check_out"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#110011" />

    </RelativeLayout>
 </FrameLayout>
